# e2e-postgres-cassandra

./: .env.example  .gitignore  README.md  docker-compose.yaml
.github/workflows/: ci.yml
apps/dashboard/: Dockerfile
apps/generator/: pyproject.toml
apps/transformer/: Dockerfile  pyproject.toml
apps/transformer/src/omnicare_cdc/: cassandra_writer.py  config.py  debezium.py  dlq.py  main.py  models.py  service.py  validation.py
apps/transformer/tests/: __init__.py  test_dlq.py  test_metrics.py  test_star_schema.py
cassandra/: schema.cql
config/connectors/: mongo-engagement.json  (+1 more)
connectors/: mongo-engagement.json  mysql-billing.json  oracle-erp.template.json  postgres-orders.json
contracts/: cdc-data-contracts.json
data-generator/: generate_data.py  requirements.txt
db/mongo/: init.js
debezium/: debezium-connector.json
deployments/: README.md
docs/: CDC_PRODUCTION_READINESS.md
generator/: pyproject.toml
generator/src/omnicare_generator/: __init__.py  config.py  main.py  models.py  repositories.py  scenario.py
generator/tests/: __init__.py  test_scenario.py
mongo/: init.js
mysql/: init.sql
notebooks/: 4_source_1_destination_table.ipynb  connect_spark_2_kafka.ipynb
oracle/: init.sql
postgres/: init.sql
scripts/: anomaly-e2e.sh  cdc-replay.sh  connect-connector.sh  demo-e2e.sh  local-preflight.sh  local-status.sh  recover-bad-facts.sh  register-connectors.sh  request-resnapshot.sh
tools/: local_preflight.py  local_status.py  quality_gate.py  security_check.py  validate_config.py  validate_contracts.py  validate_deployments.py
(+178 files in other folders)
