[project]
name = "omnicare-demo-generator"
version = "0.1.0"
description = "Generates coherent OmniCare demo data across PostgreSQL, MySQL, and MongoDB source systems."
requires-python = ">=3.11"
dependencies = [
  "psycopg[binary]>=3.2,<4",
  "pymongo>=4.10,<5",
  "PyMySQL>=1.1,<2",
]

[project.scripts]
omnicare-demo-generator = "omnicare_generator.main:main"

[tool.setuptools.packages.find]
where = ["src"]

